--- a/blocks/header/header.jade
+++ b/blocks/header/header.jade
@@ -1,6 +1,6 @@
 header.mainHeader
   img.mainHeader__logo(src='./assets/logo.svg').
   h1.mainHeader__heading Stellar
-  p.mainHeader__text Just another free, fully responsive site template built by 
+  p.mainHeader__text Just another free, fully responsive site template <br> built by 
     <a class='simple_link' href='#'>@ajlkn</a> for 
     a.simple_link(href='#') HTML5 UP.
