--- a/blocks/header/header.styl
+++ b/blocks/header/header.styl
@@ -1,11 +1,16 @@
 .mainHeader
   padding 10rem 7rem 6rem 8rem
   text-align center
+  font-weight 300
   &__logo
     display block
     margin 0 auto
   &__heading
-    // text-align center
     font-weight 300
     color white
     font-size 5rem
+    margin 2rem 0 1rem
+  &__text
+    font-size 1.75rem
+    margin 0 0 3rem
+    line-height 3rem
