--- a/index.jade
+++ b/index.jade
@@ -7,3 +7,4 @@ html(lang="en")
   body
     include ./blocks/header/header.jade
     .main__content
+      include ./blocks/navigation/navigation.jade
