--- a/main.styl
+++ b/main.styl
@@ -1,5 +1,6 @@
 @import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700'
 @import 'assets/grid.styl'
+@import 'particles/index.styl'
 @import 'blocks/header/header.styl'
 // @import 'blocks/navigation'
 // @import 'blocks/interactive'
@@ -18,11 +19,7 @@ body
   background -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%)
   background linear-gradient(45deg, #e37682 15%, #5f4d93 85%)
   margin 0
-.simple_link
-  color rgba(white, 0.65)
-  text-decoration none
-  border-bottom 1px dotted
-  transition 0.3s
-  &:hover,&:active,&:focus
-    color white
-    border-bottom 1px dotted transparent
+
+.main__content
+  max-width 1200px
+  background-color white
