--- a/main.styl
+++ b/main.styl
@@ -2,7 +2,7 @@
 @import 'assets/grid.styl'
 @import 'particles/index.styl'
 @import 'blocks/header/header.styl'
-// @import 'blocks/navigation'
+@import 'blocks/navigation/navigation.styl'
 // @import 'blocks/interactive'
 // @import 'blocks/about'
 // @import 'blocks/advertising/'
@@ -21,5 +21,9 @@ body
   margin 0
 
 .main__content
-  max-width 1200px
+  max-width 1500px
   background-color white
+  color #636363
+  margin 0 auto
+  border-top-left-radius 0.5rem
+  border-top-right-radius 0.5rem
