--- a/particles/links.styl
+++ b/particles/links.styl
@@ -1,4 +1,4 @@
-.simple_link
+.link
   color rgba(white, 0.65)
   text-decoration none
   border-bottom 1px dotted
@@ -6,3 +6,15 @@
   &:hover,&:active,&:focus
     color white
     border-bottom 1px dotted transparent
+.mainNav__link
+  color #636363
+  text-decoration none
+  font-size 1.5rem
+  font-weight 300
+  padding 0.5rem 1.5rem
+  border-radius 0.35rem
+  margin 0.5rem 0.5rem
+  &:active
+    background-color white
+  &:hover
+    background-color rgba(darkgrey, 0.1)
