Fixed main font-size

--- a/blocks/navigation/navigation.styl
+++ b/blocks/navigation/navigation.styl
@@ -1,14 +1,11 @@
 .mainNav
   position sticky
   background-color #f7f7f7
-  border-top-left-radius 0.5rem
-  border-top-right-radius 0.5rem
+  border-top-left-radius 0.35rem
+  border-top-right-radius 0.35rem
   text-align center
   display block
-  padding 1rem
-  &__list
-    display block
-    list-style none
+  padding 1.5rem
   &__item
     display inline-block
-    margin 1rem
+    margin 0 0.35rem
