--- a/index.jade
+++ b/index.jade
@@ -8,3 +8,4 @@ html(lang="en")
     include ./blocks/header/header.jade
     .main__content
       include ./blocks/navigation/navigation.jade
+      include ./blocks/interactive/interactive.jade
