--- a/main.styl
+++ b/main.styl
@@ -12,7 +12,7 @@
   box-sizing border-box
 html
   font-family: 'Source Sans Pro', sans-serif;
-  font-size 16px
+  font-size 17pt
   color rgba(white, 0.65)
 body
   background -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%)
@@ -21,7 +21,8 @@ body
   margin 0
 
 .main__content
-  max-width 1500px
+  width 64rem
+  max-width 95%
   background-color white
   color #636363
   margin 0 auto
