--- a/particles/links.styl
+++ b/particles/links.styl
@@ -9,11 +9,11 @@
 .mainNav__link
   color #636363
   text-decoration none
-  font-size 1.5rem
+  // font-size 1.5rem
   font-weight 300
   padding 0.5rem 1.5rem
   border-radius 0.35rem
-  margin 0.5rem 0.5rem
+  margin 0rem 0.35rem
   &:active
     background-color white
   &:hover
