Interactive section finished. Added new type of link 'button'

--- a/blocks/interactive/interactive.jade
+++ b/blocks/interactive/interactive.jade
@@ -1,2 +1,10 @@
 .interactive
-  h2.sectionHeading Ipsum sed adipiscing
+  .row
+    .col-md-5.col-md-push-7
+      img.interactive__img(src='./assets/pic01.jpg')
+    .col-md-7.col-md-pull-5
+      header.sectionHeader
+        h2.sectionHeader__caption Ipsum sed adipiscing
+        hr.sectionHeader__underline.sectionHeader__underline_left
+      p Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus. Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.
+      a.button(href="#") Learn More
