--- a/particles/links.styl
+++ b/particles/links.styl
@@ -18,3 +18,15 @@
     background-color white
   &:hover
     background-color rgba(darkgrey, 0.1)
+.button
+  background-color transparent
+  color #636363
+  text-decoration none
+  border-radius 0.35rem
+  padding 0.8rem 2.2rem
+  border 1px solid #ddd
+  line-height 2.75rem
+  transition 0.3s
+  text-align center
+  &:hover
+    background-color rgba(darkgrey, 0.2)
