Finished block interactive. Fixed margins to .sectionHeader.

--- a/blocks/sectionHeader/sectionHeader.styl
+++ b/blocks/sectionHeader/sectionHeader.styl
@@ -7,7 +7,8 @@
     color #636363
     font-weight 300
     font-size 2rem
-    margin 1rem 0
+    margin 1.5rem 0
+    line-height 1.5
   &__underline
     height 2px
     width 7rem
@@ -16,4 +17,4 @@
     background -moz-linear-gradient(left, #efa8b0, #a89cc8, #8cc9f0)
     background linear-gradient(to right, #efa8b0, #a89cc8, #8cc9f0)
     &_left
-      margin 0
+      margin 1.25rem 0
