--- a/blocks/interactive/interactive.styl
+++ b/blocks/interactive/interactive.styl
@@ -1,8 +1,11 @@
 .interactive
   padding 5em 5em 3em 5em
+  border-bottom 1px solid #ddd
+  line-height 1.5rem
   &__img
     display inline-block
     margin-left 4rem
+    width 80%
     padding 0.65rem
     border-radius 100%
     border 1px solid #ddd
