Added new block "content" for paddings in all blocks exept mainheader, contacts and footer

--- a/index.jade
+++ b/index.jade
@@ -9,3 +9,4 @@ html(lang="en")
     .main__content
       include ./blocks/navigation/navigation.jade
       include ./blocks/interactive/interactive.jade
+      include ./blocks/about/about.jade
