--- a/main.styl
+++ b/main.styl
@@ -3,9 +3,11 @@
 @import 'particles/index.styl'
 @import 'blocks/header/header.styl'
 @import 'blocks/navigation/navigation.styl'
+@import 'blocks/content/content.styl'
 @import 'blocks/interactive/interactive.styl'
 @import 'blocks/sectionHeader/sectionHeader.styl'
-// @import 'blocks/about'
+@import 'blocks/about/about.styl'
+
 // @import 'blocks/advertising/'
 // @import 'blocks/contacts/'
 // @import 'blocks/footer/'
