--- a/index.jade
+++ b/index.jade
@@ -4,6 +4,7 @@ html(lang="en")
     meta(charset="UTF-8")
     title Document
     link(rel="stylesheet", href="style.css")
+    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css")
   body
     include ./blocks/header/header.jade
     .main__content
