Added new placeholder for paddings in sections in mainContent (replaces .content)

--- a/blocks/about/about.jade
+++ b/blocks/about/about.jade
@@ -1,4 +1,28 @@
-.about
+section.about
   header.sectionHeader
     h2.sectionHeader__caption Magna veroeros
     hr.sectionHeader__underline
+
+  .row
+    .col-sm-6.col-md-4
+      .aboutItem
+        .aboutItem__image
+          i(area-hidden='true')
+        h3.aboutItem__caption
+        p.aboutItem__description
+    .col-sm-6.col-md-4
+      .aboutItem
+        .aboutItem__image
+          i(area-hidden='true')
+        h3.aboutItem__caption
+        p.aboutItem__description
+    .col-sm-12.col-md-4
+      .aboutItem
+        .aboutItem__image
+          i(area-hidden='true')
+        h3.aboutItem__caption
+        p.aboutItem__description
+
+    .aboutItem
+      a.button(href='#') Learn More
+      
