--- a/blocks/sectionHeader/sectionHeader.styl
+++ b/blocks/sectionHeader/sectionHeader.styl
@@ -7,7 +7,7 @@
     color #636363
     font-weight 300
     font-size 2rem
-    margin 1.5rem 0
+    margin 0 0 1.5rem 
     line-height 1.5
   &__underline
     height 2px
