Finished section 'About'

--- a/blocks/about/about.jade
+++ b/blocks/about/about.jade
@@ -1,27 +1,30 @@
 section.about
-  header.sectionHeader
+  header.sectionHeader.sectionHeader_center
     h2.sectionHeader__caption Magna veroeros
     hr.sectionHeader__underline
 
   .row
     .col-sm-6.col-md-4
       .aboutItem
-        .aboutItem__image
-          i(area-hidden='true')
-        h3.aboutItem__caption
-        p.aboutItem__description
+        .aboutItem__image.aboutItem__image_pink
+          i.fa.fa-code.code(aria-hidden="true")
+        h3.aboutItem__caption Ipsum consequat
+        p.aboutItem__description Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.
+
     .col-sm-6.col-md-4
       .aboutItem
-        .aboutItem__image
-          i(area-hidden='true')
-        h3.aboutItem__caption
-        p.aboutItem__description
+        .aboutItem__image.aboutItem__image_purple
+          i.fa.fa-files-o(aria-hidden='true')
+        h3.aboutItem__caption Amed sed feugiat
+        p.aboutItem__description Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.
+
     .col-sm-12.col-md-4
       .aboutItem
-        .aboutItem__image
-          i(area-hidden='true')
-        h3.aboutItem__caption
-        p.aboutItem__description
+        .aboutItem__image.aboutItem__image_blue
+          i.fa.fa-diamond(aria-hidden='true')
+        h3.aboutItem__caption Dolor nullam
+        p.aboutItem__description Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.
+
 
     .aboutItem
       a.button(href='#') Learn More
