--- a/blocks/about/about.styl
+++ b/blocks/about/about.styl
@@ -3,3 +3,25 @@
   &Item
     text-align center
     width 100%
+    margin-bottom 3rem
+    &__image
+      doubleBorder(1px, #ddd, 0.65rem)
+      display inline-block
+      border-radius 100%
+      width 10rem
+      height 10rem
+      font-size 4rem
+      line-height 10rem
+      margin-bottom 2rem
+      &_pink
+        color #efa8b0
+      &_purple
+        color #a89cc8
+      &_blue
+        color #8cc9f0
+    &__caption
+      color #636363
+      font-weight 300
+      font-size 1.25rem
+    &__description
+      line-height 1.65
