--- a/blocks/sectionHeader/sectionHeader.styl
+++ b/blocks/sectionHeader/sectionHeader.styl
@@ -18,3 +18,7 @@
     background linear-gradient(to right, #efa8b0, #a89cc8, #8cc9f0)
     &_left
       margin 1.25rem 0
+  &_center
+    display block
+    text-align center
+    margin-bottom 3rem
