--- a/main.styl
+++ b/main.styl
@@ -6,7 +6,7 @@
 @import 'blocks/interactive/interactive.styl'
 @import 'blocks/sectionHeader/sectionHeader.styl'
 @import 'blocks/about/about.styl'
-// @import 'blocks/advertising/'
+@import 'blocks/statistics/statistics.styl'
 // @import 'blocks/contacts/'
 // @import 'blocks/footer/'
 *
@@ -24,9 +24,9 @@ body
 
 p
   margin 0 0 2em 0
-.main__content
-  width 64rem
-  max-width 95%
+.mainWrapper
+  width 85%
+  max-width 1600px
   background-color white
   color #636363
   margin 0 auto
