--- a/blocks/sectionHeader/sectionHeader.styl
+++ b/blocks/sectionHeader/sectionHeader.styl
@@ -9,6 +9,10 @@
     font-size 2rem
     margin 0 0 1.5rem 
     line-height 1.5
+  &__description
+    font-size 1.25rem
+    letter-spacing -0.025rem
+    margin 2rem 0
   &__underline
     height 2px
     width 7rem
@@ -22,4 +26,6 @@
     display block
     text-align center
     margin-bottom 3rem
+  
+    
 
