--- a/index.jade
+++ b/index.jade
@@ -7,7 +7,7 @@ html(lang="en")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css")
   body
     include ./blocks/header/header.jade
-    .mainContent
+    .mainWrapper
       include ./blocks/navigation/navigation.jade
       include ./blocks/interactive/interactive.jade
       include ./blocks/about/about.jade
